<resources>
    <string name="app_name">Usus</string>
    <string name="email_hint">E-mail</string>
    <string name="pass_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="emptyPass_error">Enter password</string>
    <string name="emptyEmail_error">Enter email</string>
    <string name="wrongFormat_email">Wrong format of email</string>
    <string name="empty_error">Please enter your credentials</string>
    <string name="btn_send">Send</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_Pass">Enter pass</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="reg_button">Join us</string>
    <string name="loading_msg">Loading</string>
    <string name="password_nomatch">Password don\'t match</string>
    <string name="signUp">Sign Up</string>
    <string name="addRoom">Add</string>
    <string name="choose_Room">Choose room</string>

</resources>
